# appveyor_vcpkg_cmake_bug

./: CMakeLists.txt  README.md  appveyor.yml
